get database data to the localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 spring.datasource.driver-class-name-org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/questiondb
+spring.datasource.url= jdbc:postgresql://localhost:5432/quizedb
 spring.datasource.username = postgres
 spring.datasource.password = Uresha#2001
 spring.jpa.hibernate.ddl-auto = update
